# miniml

./: .gitignore  .gitmodules  .miniml_history  .repl_history  Cargo.toml  LICENSE  README.md  backtrace.sh  cabal.project  debug.sh  grammar.bnf  grammar.ebnf  history.txt  idyll.cabal  line-count.sh  miniML.cabal  miniml.cabal  mvp.ebnf  mvp_grammar.ebnf  objectGraph.md  objectGraph.xml  out  scratch  tinyML.cabal  unsafe.sh
analysis/: Cargo.toml
compiler/MMC/: AST.hs  Build.hs  Cargo.toml  Common.hs  Core.hs  Driver.hs  Infer.hs  Kind.hs  Layout.hs  Lexer.hs  Lexer.hs.OLD  Lexer.x  Miniparsec.hs  NIR.hs  Parsec.hs  Parser.hs  Pipeline.hs  Rename.hs  Scheme.hs  Symbol.hs  TIR.hs  Token.hs  TokenTree.hs  Ty.hs
compiler/MMC/Common/: LineIndex.hs
compiler/MMC/Miniparsec/: Error.hs  Internal.hs  State.hs  Stream.hs
compiler/MMC/Parsec/: Error.hs  Internal.hs  State.hs  Stream.hs
compiler/MMC/Static/: Scc.hs
compiler/MMC/Syn/: AST.hs  GreenNode.hs  Layout.hs  Lexeme.hs  Lexer.hs  Lexer.x  Parser.hs  SyntaxKind.hs  SyntaxNode.hs  Token.hs  TokenTree.hs  miniml.ug
compiler/MMC/Typing/: Kind.hs  Ty.hs
compiler/MMC/Utils/: LineIndex.hs  Span.hs  Symbol.hs  Unique.hs
compiler/MMC/rustbits/: Cargo.toml
compiler/mmc-analysis/: Cargo.toml
compiler/mmc-analysis/src/: error.rs  lib.rs  scc.rs
compiler/mmc-core/: Cargo.toml
compiler/mmc-read/: Cargo.toml
compiler/mmc-read/src/: lib.rs  reader_error.rs
miniml/: Cargo.toml
miniml-compile/: Cargo.toml
miniml-compile/src/: compiler.rs  error.rs  lib.rs
miniml-core/: Cargo.toml
miniml-core/src/: lib.rs
miniml-eval/: Cargo.toml
miniml-eval/src/: env.rs  eval.rs  interpreter.rs  lib.rs  runtime_error.rs  value.rs
miniml-lower/: Cargo.toml
miniml-pipeline/: Cargo.toml
miniml-pipeline/src/: lib.rs
miniml-rename/: Cargo.toml
miniml-rename/src/: env.rs  error.rs  lib.rs  nir.rs  resolver.rs
miniml-rename/src/nir/: decl_kind.rs  expr_kind.rs  ident.rs  mod.rs  pattern_kind.rs  type_hint.rs  type_hint_kind.rs
miniml-repl/: Cargo.toml
miniml-repl/src/: lib.rs  tree_walk.rs
miniml-syntax/: Cargo.toml
miniml-syntax/examples/: list.mn  mvp.scm  scratch.hs  sexpr.scm
miniml-syntax/src/: ast.rs  error.rs  lex.rs  lib.rs  lsp.rs  node.rs  parse.rs  parser.rs  syntax_kind.rs  token.rs  token_iter.rs
miniml-syntax/src/lex/: mod.rs  token.rs
miniml-syntax/src/parser/: mod.rs
miniml-syntax/src/reader/: lexer.rs  mod.rs  read.rs  sexpr.rs  token.rs
miniml-syntax/src/snapshots/: miniml__parser__tests__lex_int.snap  miniml__parser__tests__parse_int.snap  miniml__parser__tests__parse_list.snap  miniml_syntax__parser__tests__add.snap  miniml_syntax__parser__tests__binary.snap  miniml_syntax__parser__tests__complex.snap  miniml_syntax__parser__tests__const.snap  miniml_syntax__parser__tests__elif.snap  miniml_syntax__parser__tests__fn_add.snap  miniml_syntax__parser__tests__if.snap  miniml_syntax__parser__tests__if_atom.snap  miniml_syntax__parser__tests__infix.snap  miniml_syntax__parser__tests__infix.snap.new  miniml_syntax__parser__tests__int.snap  miniml_syntax__parser__tests__lambda.snap  miniml_syntax__parser__tests__lambda.snap.new  miniml_syntax__parser__tests__let.snap  miniml_syntax__parser__tests__let_expr.snap  miniml_syntax__parser__tests__let_expr.snap.new  miniml_syntax__parser__tests__neg.snap  miniml_syntax__parser__tests__parse_if.snap.new  miniml_syntax__parser__tests__parse_int.snap  miniml_syntax__parser__tests__pipe.snap.new  miniml_syntax__parser__tests__rational.snap  miniml_syntax__parser__tests__real.snap  miniml_syntax__parser__tests__stmt.snap.new  miniml_syntax__parser__tests__unit.snap  miniml_syntax__token__tests__lex_sub.snap
miniml-syntax/tests/: parser.rs
miniml-syntax/tests/integration/: tests.rs
miniml-vm/: Cargo.toml
miniml-vm/src/: call_frame.rs  chunk.rs  error.rs  lib.rs  object.rs  opcode.rs  value.rs  vm.rs
miniml-vm/src/snapshots/: miniml_vm__chunk__tests__const.snap.new  miniml_vm__chunk__tests__multiple_const.snap.new  miniml_vm__chunk__tests__neg.snap.new  miniml_vm__chunk__tests__ret.snap.new
miniml/src/: main.rs  repl.rs
syntax/: Cargo.toml
syntax/snapshots/: miniml__syntax__parse__tests__parse_apply.snap.new  miniml__syntax__parse__tests__parse_bool.snap.new  miniml__syntax__parse__tests__parse_def.snap.new  miniml__syntax__parse__tests__parse_fn_def.snap.new  miniml__syntax__parse__tests__parse_ident.snap.new  miniml__syntax__parse__tests__parse_infix.snap.new  miniml__syntax__parse__tests__parse_lambda.snap.new  miniml__syntax__parse__tests__parse_lambda_apply.snap.new  miniml__syntax__parse__tests__parse_let.snap.new  miniml__syntax__parse__tests__parse_let_fn.snap.new  miniml__syntax__parse__tests__parse_num.snap.new  miniml__syntax__parse__tests__parse_paren.snap.new  miniml__syntax__parse__tests__parse_prefix.snap.new  miniml__syntax__parse__tests__parse_unit.snap.new  typed_lambda_calculus__syntax__parse__tests__parse_apply.snap  typed_lambda_calculus__syntax__parse__tests__parse_bool.snap  typed_lambda_calculus__syntax__parse__tests__parse_fn_def.snap  typed_lambda_calculus__syntax__parse__tests__parse_ident.snap  typed_lambda_calculus__syntax__parse__tests__parse_infix.snap  typed_lambda_calculus__syntax__parse__tests__parse_lambda.snap  typed_lambda_calculus__syntax__parse__tests__parse_lambda_apply.snap  typed_lambda_calculus__syntax__parse__tests__parse_let.snap  typed_lambda_calculus__syntax__parse__tests__parse_let_fn.snap  typed_lambda_calculus__syntax__parse__tests__parse_paren.snap  typed_lambda_calculus__syntax__parse__tests__parse_prefix.snap
syntax/src/: ast.rs  lexer.rs  parse.rs  parser.rs  token.rs
syntax/src/snapshots/: syntax__parse__tests__parse_apply.snap  syntax__parse__tests__parse_bool.snap  syntax__parse__tests__parse_def.snap  syntax__parse__tests__parse_fn_def.snap  syntax__parse__tests__parse_ident.snap  syntax__parse__tests__parse_infix.snap  syntax__parse__tests__parse_lambda.snap  syntax__parse__tests__parse_lambda_apply.snap  syntax__parse__tests__parse_let.snap  syntax__parse__tests__parse_let_fn.snap  (+6 more)
(+515 files in other folders)
