[package]
name = "miniml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
insta = { version = "1.28.0", features = ["yaml"] }
lasso = { version = "0.6.0", features = ["multi-threaded"] }
once_cell = "1.17.1"
itertools = "0.10.5"
logos = "0.11.0-rc2"
num-bigint = "0.4.3"
num-complex = "0.4.3"
num-rational = "0.4.1"
