cabal-version:      3.0
name:               idyll
version:            0.1.0.0
synopsis:           The Idyll programming language
license:            BSD-3-Clause
license-file:       LICENSE
author:             Chris McDearman
maintainer:         mcdearmanchris@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: 
      -Wall 
      -Werror=missing-signatures 
      -Werror=incomplete-patterns 
      -Werror=incomplete-uni-patterns 
      -Wno-unused-do-bind
    --   -f+megaparsec-compat
    --   -fllvm  
    --   -haddock
    --   -ddump-simpl -ddump-cmm -ddump-stg-final -ddump-to-file -dsuppress-all

executable idyllic
    import:           warnings
    main-is:          Main.hs
    other-modules: 
        Idyllic.Build.Driver
        Idyllic.Build.Effect
        Idyllic.Build.Pipeline
        Idyllic.Static.Scc
        Idyllic.Syn.AST
        Idyllic.Syn.Layout
        Idyllic.Syn.Lexer
        Idyllic.Syn.Parser
        Idyllic.Syn.Token
        Idyllic.Syn.TokenTree
        Idyllic.Build
        Idyllic.Typing.Kind
        Idyllic.Typing.Ty
        Idyllic.Utils.LineIndex
        Idyllic.Utils.Span
        Idyllic.Utils.Symbol
        Idyllic.Utils.Unique
    default-extensions: 
        OverloadedStrings
        MagicHash
        ScopedTypeVariables
        LambdaCase
        TupleSections
        RecordWildCards
        BangPatterns
        PatternSynonyms
        TypeFamilies
        OrPatterns
        ViewPatterns
        MultilineStrings
    build-depends:    
        base,
        primitive,
        bytestring,
        unordered-containers,
        intern,
        diagnose,
        wcwidth,
        optics,
        parser-combinators,
        text,
        prettyprinter,
        pretty-simple,
        array,
        haskeline,
        containers,
        transformers,
        mtl,
        stm,
        hashable,
        vector,
        data-default
    build-tool-depends: alex:alex
    hs-source-dirs:   compiler
    default-language: Haskell2010