cabal-version:      3.0
name:               miniML
version:            0.1.0.0
synopsis:           The miniML programming language
license:            BSD-3-Clause
license-file:       LICENSE
author:             Chris McDearman
maintainer:         mcdearmanchris@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: 
      -Wall 
      -Werror=missing-signatures 
      -Werror=incomplete-patterns 
      -Werror=incomplete-uni-patterns 
      -Wno-unused-do-bind
    --   -f+megaparsec-compat
    --   -fllvm  
    --   -haddock
    --   -ddump-simpl -ddump-cmm -ddump-stg-final -ddump-to-file -dsuppress-all

executable miniML
    import:           warnings
    main-is:          Main.hs
    other-modules: 
        MMC.AST
        MMC.Common
        MMC.Kind
        MMC.Layout
        MMC.Lexer
        MMC.Parser
        MMC.Pipeline
        MMC.Symbol
        MMC.Token
        MMC.Ty
    default-extensions: 
        OverloadedStrings
        MagicHash
        ScopedTypeVariables
        LambdaCase
        TupleSections
        RecordWildCards
        BangPatterns
        PatternSynonyms
        TypeFamilies
    build-depends:    
        base,
        bytestring,
        unordered-containers,
        intern,
        megaparsec,
        diagnose,
        wcwidth,
        optics,
        parser-combinators,
        text,
        prettyprinter,
        pretty-simple,
        array,
        haskeline,
        containers,
        effectful,
        transformers,
        mtl,
    hs-source-dirs:   compiler
    default-language: Haskell2010