cabal-version:      3.0
name:               miniML
version:            0.1.0.0
synopsis:           The miniML programming language
license:            BSD-3-Clause
license-file:       LICENSE
author:             Chris McDearman
maintainer:         mcdearmanchris@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: 
      -Wall 
      -Werror=missing-signatures 
      -Werror=incomplete-patterns 
      -Werror=incomplete-uni-patterns 
      -Wno-unused-do-bind
    --   -f+megaparsec-compat
    --   -fllvm  
    --   -haddock
    --   -ddump-simpl -ddump-cmm -ddump-stg-final -ddump-to-file -dsuppress-all

executable miniML
    import:           warnings
    main-is:          Main.hs
    other-modules: 
        MMC.Build.Driver
        MMC.Build.Effect
        MMC.Build.Pipeline
        MMC.Static.Scc
        -- MMC.Syn.AST
        MMC.Syn.GreenNode
        MMC.Syn.Layout
        MMC.Syn.Lexer
        MMC.Syn.Parser
        MMC.Syn.SyntaxNode
        MMC.Syn.TokenTree
        MMC.Build
        MMC.Typing.Kind
        MMC.Typing.Ty
        MMC.Utils.LineIndex
        MMC.Utils.Span
        MMC.Utils.Symbol
        MMC.Utils.Unique
    default-extensions: 
        OverloadedStrings
        MagicHash
        ScopedTypeVariables
        LambdaCase
        TupleSections
        RecordWildCards
        BangPatterns
        PatternSynonyms
        TypeFamilies
        OrPatterns
        ViewPatterns
        MultilineStrings
    build-depends:    
        base,
        bytestring,
        unordered-containers,
        intern,
        diagnose,
        wcwidth,
        optics,
        parser-combinators,
        text,
        prettyprinter,
        pretty-simple,
        array,
        haskeline,
        containers,
        transformers,
        mtl,
        stm,
        hashable,
        vector,
        data-default
    build-tool-depends: alex:alex
    hs-source-dirs:   compiler
    default-language: Haskell2010