cabal-version:      3.0
name:               miniml
version:            0.1.0.0
synopsis:           The MiniML programming language
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             mcdearman
maintainer:         mcdearmanchris@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable miniml
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010
