[package]
name = "miniml-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniml-utils = { path = "../miniml-utils" }
miniml-ast = { path = "../miniml-ast" }
miniml-nir = { path = "../miniml-nir" }
miniml-tir = { path = "../miniml-tir" }
insta = { version = "1.28.0", features = ["yaml"] }
itertools = "0.10.5"
num-bigint = "0.4.3"
num-complex = "0.4.3"
num-rational = "0.4.1"
notify = "6.1.1"
num-traits = "0.2.17"
libc = "0.2.153"
pretty = "0.12.3"
colored = "2.1.0"
