[package]
name = "miniml-eval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniml-util = { path = "../miniml-util" }
miniml-syntax = { path = "../miniml-syntax" }
insta = { version = "1.28.0", features = ["yaml"] }
itertools = "0.10.5"
num-bigint = "0.4.3"
num-complex = "0.4.3"
num-rational = "0.4.1"
log = "0.4.18"
