[package]
name = "miniml-lower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniml-syntax = { path = "../miniml-syntax" }
miniml-util = { path = "../miniml-util" }
miniml-core = { path = "../miniml-core" }
