[package]
name = "miniml-pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniml-utils = { path = "../miniml-utils" }
miniml-ast = { path = "../miniml-ast" }
miniml-parse = { path = "../miniml-parse" }
log = "0.4.18"
env_logger = "0.10.0"
insta = { version = "1.28.0", features = ["yaml"] }
pretty = "0.12.3"