[package]
name = "miniml-repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniml-syntax = { path = "../miniml-syntax" }
miniml-eval = { path = "../miniml-eval" }
insta = { version = "1.28.0", features = ["yaml"] }
clap = { version = "4.3.0", features = ["cargo", "derive"] }
rustyline = "11.0.0"
log = "0.4.18"
