[package]
name = "miniml-repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniml-syntax = { path = "../miniml-syntax" }
log = "0.4.18"
env_logger = "0.10.0"
insta = { version = "1.28.0", features = ["yaml"] }
lasso = { version = "0.6.0", features = ["multi-threaded"] }
clap = { version = "4.3.0", features = ["cargo", "derive"] }
rustyline = "11.0.0"
notify = "6.1.1"
