[package]
name = "miniml-syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.18"
env_logger = "0.10.0"
insta = { version = "1.28.0", features = ["yaml"] }
lasso = { version = "0.6.0", features = ["multi-threaded"] }
once_cell = "1.17.1"
itertools = "0.10.5"
num-bigint = "0.4.3"
num-complex = "0.4.3"
num-rational = "0.4.1"
logos = "0.13.0"
cstree = { version = "0.12.0", features = ["derive"] }
clap = { version = "4.3.0", features = ["cargo", "derive"] }
rustyline = "11.0.0"
notify = "6.1.1"
chumsky = "=1.0.0-alpha.4"
num-traits = "0.2.17"