[package]
name = "miniml-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniml-util = { path = "../miniml-util" }
insta = { version = "1.28.0", features = ["yaml"] }
num-bigint = "0.4.3"
num-complex = "0.4.3"
num-rational = "0.4.1"
log = "0.4.18"