[package]
name = "miniml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniml-repl = { path = "../miniml-repl" }
log = "0.4.18"
env_logger = "0.10.0"
clap = { version = "4.3.0", features = ["cargo", "derive"] }
rustyline = "11.0.0"
notify = "6.1.1"
