[package]
name = "miniml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniml-ast = { path = "../miniml-ast" }
miniml-utils = { path = "../miniml-utils" }
miniml-syntax = { path = "../miniml-syntax" }
miniml-rename = { path = "../miniml-rename" }
log = "0.4.18"
env_logger = "0.10.0"
insta = { version = "1.28.0", features = ["yaml"] }
clap = { version = "4.3.0", features = ["cargo", "derive"] }
rustyline = { version = "11.0.0", features = ["with-file-history", "derive"] }
# notify = "6.1.1"
# libc = "0.2.153"
# pretty = "0.12.3"
# colored = "2.1.0"
