[package]
name = "syntax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
insta = { version = "1.28.0", features = ["yaml"] }
itertools = "0.10.5"
num-bigint = "0.4.3"
num-complex = "0.4.3"
num-rational = "0.4.1"
logos = "0.13.0"
cstree = { version = "0.12.0", features = ["derive"] }
chumsky = "=1.0.0-alpha.4"
num-traits = "0.2.17"
