[package]
name = "mmc"
version = "0.1.0"
edition = "2021"

[dependencies]
mmc-pipeline = { path = "../mmc-pipeline" }
log = "0.4.18"
env_logger = "0.10.0"
insta = { version = "1.28.0", features = ["yaml"] }
clap = { version = "4.3.0", features = ["cargo", "derive"] }
rustyline = { version = "11.0.0", features = ["with-file-history", "derive"] }
pretty = { version = "0.12.3", features = ["termcolor"] }
